<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cob_obstacle_distance</name>
  <version>0.8.21</version>
  <description>The cob_obstacle_distance package calculates distances between both robot links and obstacles to be used for obstacle avoidance within cob_twist_controller framework.</description>

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <author email="fxm-mb@ipa.fhg.de">Marco Bezzon</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>assimp-dev</depend>
  <depend>boost</depend>
  <depend>cob_control_msgs</depend>
  <depend>cob_srvs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>eigen</depend>
  <depend condition="$ROS_DISTRO != noetic">libfcl-dev</depend>
  <depend condition="$ROS_DISTRO == noetic">fcl</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_conversions</depend>
  <depend>kdl_parser</depend>
  <depend>moveit_msgs</depend>
  <depend condition="$ROS_DISTRO == melodic">orocos_kdl</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl</depend>
  <depend>pkg-config</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
